--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "algorithms-project",
-  "version": "0.1.0",
-  "private": true,
+  "name": "y",
+  "version": "y",
+  "private": false,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "canvas-confetti": "^1.9.2",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -41,10 +45,15 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^12.1.5",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react-router-dom": "^5.3.3",
-    "fetch-mock": "^9.11.0",
-    "react-test-renderer": "^18.3.1",
-    "redux-mock-store": "^1.5.4"
-  }
+    "cypress": "^13.6.4",
+    "eslint-plugin-cypress": "^2.15.1",
+    "gh-pages": "^6.1.1",
+    "react-test-renderer": "17.0.2"
+  },
+  "main": "index.tsx",
+  "repository": "y",
+  "author": "VeraDgt <veradgt@gmail.com>",
+  "license": "MIT"
 }
